--- a/pythonpro/base/templates/base/home.html
+++ b/pythonpro/base/templates/base/home.html
@@ -1,112 +1,181 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Python Pro</title>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Pagian do Curso Python Pro">
-    <meta name="author" content="PHCF">
+	<title>Python Pro</title>
 
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<meta name="description" content="Pagina do Curso Python Pro">
+	<meta name="author" content="PHCF">
+	<link rel="icon" type="image/jpg" href="{% static 'img/olho.jpg' %}" />
 
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 
-  </head>
-  <body>
-  	<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href="{% url 'home' %}">Python Pro</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+	<script src="{% static 'js/jquery.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/scripts.js' %}"></script>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-  
-    </ul>
-    
-  </div>
-</nav>
+</head>
 
-    <div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-							 
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+<body>
+	<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+		<a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+
+			</ul>
+
+		</div>
+	</nav>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+
+				<button class="navbar-toggler" type="button" data-toggle="collapse"
+					data-target="#bs-example-navbar-collapse-1">
 					<span class="navbar-toggler-icon"></span>
 				</button> <a class="navbar-brand" href="#">Brand</a>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="navbar-nav">
 						<li class="nav-item active">
-							 <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-							 <a class="nav-link" href="#">Link</a>
+							<a class="nav-link" href="#">Link</a>
 						</li>
 						<li class="nav-item dropdown">
-							 <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+							<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
+								data-toggle="dropdown">Dropdown link</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-								 <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
+								<a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another
+									action</a> <a class="dropdown-item" href="#">Something else here</a>
 								<div class="dropdown-divider">
 								</div> <a class="dropdown-item" href="#">Separated link</a>
 							</div>
 						</li>
 					</ul>
 					<form class="form-inline">
-						<input class="form-control mr-sm-2" type="text"> 
+						<input class="form-control mr-sm-2" type="text">
 						<button class="btn btn-primary my-2 my-sm-0" type="submit">
 							Search
 						</button>
 					</form>
 					<ul class="navbar-nav ml-md-auto">
 						<li class="nav-item active">
-							 <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item dropdown">
-							 <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+							<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
+								data-toggle="dropdown">Dropdown link</a>
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-								 <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a> <a class="dropdown-item" href="#">Something else here</a>
+								<a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another
+									action</a> <a class="dropdown-item" href="#">Something else here</a>
 								<div class="dropdown-divider">
 								</div> <a class="dropdown-item" href="#">Separated link</a>
 							</div>
 						</li>
 					</ul>
 				</div>
-			</nav>
-			<div class="jumbotron">
-				<h2>
-					Teste!!!
-				</h2>
-				<h2>
-					<span>Página teste para projeto Django Python Pro</span>
-				</h2>
-				<h2>
-					<a class="btn btn-primary btn-large" href="#">Saiba Mais</a>
-				</h2>
-			</div>
-			<div class="card">
-				<h5 class="card-header">
-					Card title
-				</h5>
-				<div class="card-body">
-					<p class="card-text">
-						Card content
-					</p>
+				</nav>
+				<div class="jumbotron">
+					<h2>
+						Projeto de Python e Django
+					</h2>
+					<!-- Begin Mailchimp Signup Form -->
+					<div id="mc_embed_signup">
+						<form
+							action="https://gmail.us10.list-manage.com/subscribe/post?u=672a3849876dd80c85c9e7287&amp;id=a016271f75"
+							method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+							class="validate" target="_blank" novalidate>
+							<div id="mc_embed_signup_scroll">
+								<h2>Subscribe</h2>
+								<div class="indicates-required"><span class="asterisk">*</span> e-mail</div>
+								<div class="mc-field-group">
+									<label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+									</label>
+									<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+								</div>
+								<div class="mc-field-group">
+									<label for="mce-FNAME">First Name </label>
+									<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+								</div>
+								<div id="mce-responses" class="clear">
+									<div class="response" id="mce-error-response" style="display:none"></div>
+									<div class="response" id="mce-success-response" style="display:none"></div>
+								</div>
+								<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+								<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+										name="b_672a3849876dd80c85c9e7287_a016271f75" tabindex="-1" value=""></div>
+								<div class="clear"><input type="submit" value="Subscribe" name="subscribe"
+										id="mc-embedded-subscribe" class="button"></div>
+							</div>
+						</form>
+					</div>
+
+					<!--End mc_embed_signup-->
+						
+					<h2>
+						<span>Página teste para projeto Django Python Pro</span>
+					</h2>
 				</div>
-				<div class="card-footer">
-					Card footer
+				<div class="card">
+					<h5 class="card-header">
+						Mais detalhes sobre mim
+					</h5>
+					<div class="card-body">
+						<p class="card-text">
+							<img src="{% static 'img/eu.jpg' %}" alt="Foto de Pedro Henrique"
+								class="img-thumbnail float-left mr-1" />
+							Confira em breve mais informações no meu github
+							<a href="https://github.com/pedrohcf3141" target="_blank ">GitHub Pedro</a>
+							"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus
+							lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique
+							senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna,
+							auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing."
+						</p>
+					</div>
+
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+
+	<footer class="main-footer mt-5 text-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<h3>Entre em Contato</h3>
+					<address>
+						(12) 98134-7611
+						<br />
+						<a href="pedrohcf@gmail.com">pedrohcf@gmail.com</a>
+					</address>
+				</div>
+			</div>
+		</div>
+		<div class="rights pb-4">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						{% now 'Y' %} Python Pro. Todos direitos reservados.
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
-  </body>
+</body>
+
 </html>
