ajustado heranças dos templates ajustados os testes devido a herença

--- a/pythonpro/aperitivos/templates/aperitivos/video.html
+++ b/pythonpro/aperitivos/templates/aperitivos/video.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-	teste video
-
-</body>
-</html>
+{% extends 'base/base.html'%}
+{% load static %}
+{% block title %}Python Pro-Video{% endblock title %}
+	
+{%block body%}
+	<h1>Video Aperitivo: Motivação</h1>
+	teste video animais fantasticos 
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/r9xU2r8ryzI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+{%endblock body%}
